 - remove LuaShaders config-setting
 - remove legacy InfoTexHandler
 - mandate GLSL support
 - throw out legacy load-screen code (replaced by LuaIntro)
 - change PitchAdjust config-setting from a boolean to an integer
   0 disables, 1 scales pitch by the square root of game speed, 2
   scales linearly with game speed
 - `/nocost` now accepts 0/1 parameter (still toggles if none given)

Fixes:
 - fix infinite backtracking loop in PFS
 - fix #5814 (broken slopemap indexing for terrain buildability tests)
 - fix #5803 (move goals cancelled when issued onto blocked terrain)
 - fix Spring.{G,S}etConfigFloat not being callable
 - fix Spring.GetPlayerRoster sometimes excluding active players



-- 104.0 --------------------------------------------------------
Major:
 - Add LuaMenu - an unsynced stripped down Lua environment that starts before the game is loaded and persists through reload
   this environment receives the Draw{Genesis,Screen,ScreenPost} callins as well as
   a special AllowDraw FPS limiter which enables these if true is returned from it
   (otherwise they are called once every 30 seconds)
 ! make GL3.0 the minimum required OpenGL version; Intel G45's and other relics are now banned
   (any driver that claims support for this *and* shaders is allowed to run Spring unimpeded)
 - improve memory management so Spring.Reload can be safely called multiple times in a row
 - kill various desyncs that slipped into 103.0

Misc:
 - Assorted bugfixes and optimisations
 - force regeneration of ArchiveCache
 - Implement VFS modes - VFS.MOD, VFS.MAP & VFS.BASE now actually work. Added VFS.MENU
 ! base archives now have modtype of 4 and menu archive have modtype of 5
 ! one letter command-line flags (e.g. -g instead of --game) are removed
 - generally more detailed error-logging
 - continued internal cleanup and C++11 adoption to reduce unnecessary data copying and allocing