@@ -518,7 +518,6 @@ UnitDef::UnitDef(const LuaTable& udTable, const std::string& unitName, int id)
 			if ((moveDef = moveDefHandler->GetMoveDefByName(moveClass)) == nullptr)
 				throw content_error(errMsg);
 
-			moveDef->udRefCount += 1;
 			this->pathType = moveDef->pathType;
 		}
 
